--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ libraryCuration/straightLineStacks/*
 libraryCuration/curvedLineStacks/*
 libraryCuration/intersectingLineStacks/*
 libraryCuration/substacks/*
+Hough_transform/.ipynb_checkpoints
+
