--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ libraryCuration/curvedLineStacks/*
 libraryCuration/intersectingLineStacks/*
 libraryCuration/substacks/*
 Hough_transform/.ipynb_checkpoints
+Hough_transform/Hough_transform_debugging.ipynb
 
