--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Hough_transform/.ipynb_checkpoints
 Hough_transform/Hough_transform_debugging.ipynb
 Hough_transform/accumulator.csv
 report/detecting_straight_lines_report.html
+Unet/dataCuration/*
