--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Hough_transform/Hough_transform_debugging.ipynb
 Hough_transform/accumulator.csv
 report/detecting_straight_lines_report.html
 Unet/dataCuration/*
+Unet/.ipynb_checkpoints/*
