clean up repo, move ImageJ scripts in one place

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ report/detecting_straight_lines_report.html
 Unet/dataCuration/*
 Unet/.ipynb_checkpoints/*
 dataCopyLocal/*
+detectingLinesLocal/*
