added folders with augmented raw+skeletonised data

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 .DS_Store
 libraryCuration/.DS_Store
 .ipynb_checkpoints
-originalData/*
+dataCopyLocal/*
+detectingLinesLocal/*
 libraryCuration/straightLineStacks/*
 libraryCuration/curvedLineStacks/*
 libraryCuration/intersectingLineStacks/*
 libraryCuration/substacks/*
 Hough_transform/.ipynb_checkpoints
 Hough_transform/Hough_transform_debugging.ipynb
-Hough_transform/accumulator.csv
-report/detecting_straight_lines_report.html
 Unet/dataCuration/*
 Unet/.ipynb_checkpoints/*
-dataCopyLocal/*
-detectingLinesLocal/*
+Unet/python_notebooks/raw/*
+Unet/python_notebooks/skeletonised/*
